--- a/sanlanshi.html
+++ b/sanlanshi.html
@@ -27,6 +27,7 @@
 		background: #fff;
 	}
 	#content{
+		min-width: 540px;
 		margin-top: 20px;
 		padding: 20px;
 		background: #eee;
@@ -63,7 +64,7 @@
 		</div>
 		<div id="center">
 			<h2>关于我们</h2>
-			<p class="introduce">&nbsp &nbsp都说一个女人相当于500只鸭子，你好，这里有2500只。<br><br />&nbsp &nbsp</p>
+			<p class="introduce">&nbsp &nbsp都说一个女人相当于500只鸭子，你好，这里有2500只。<br><br />&nbsp &nbsp感谢<a href="http://ife.baidu.com/group/profile?groupId=1714">唐天宇</a>提出关于min-width的建议（づ￣3￣）づ╭❤</p>
 		</div>
 	</div>
 </body>
