--- a/sanlanshi.html
+++ b/sanlanshi.html
@@ -47,6 +47,9 @@
 		margin-left: 240px;
 		margin-right: 160px;
 	}
+	.clearbox{
+		clear: both;
+	}
 	</style>
 </head>
 <body>
@@ -66,6 +69,7 @@
 			<h2>关于我们</h2>
 			<p class="introduce">&nbsp &nbsp都说一个女人相当于500只鸭子，你好，这里有2500只。<br><br />&nbsp &nbsp感谢<a href="http://ife.baidu.com/group/profile?groupId=1714">唐天宇</a>提出关于min-width的建议（づ￣3￣）づ╭❤</p>
 		</div>
+		<div class="clearbox"></div>
 	</div>
 </body>
 </html>
